# QualitySoft-WMS

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  RELEASE_NOTES.md  main.py  pyproject.toml  qodana.yaml  requirements.txt  tradia.iss  tradia.spec  wholesale.db
.github/workflows/: ci.yml  release.yml
backup/: auto_backup.py
database/: db_handler.py  migrations.py
models/: customer.py  invoice.py  product.py  user.py
testes/: conftest.py  test_customers.py  test_invoice.py  test_login_window.py  test_main_window.py  test_products.py  test_receipt_view.py  test_users.py  wholesale.db
tests/: base_test.py  conftest.py  test_activity_log.py  test_backup_features.py  test_customer_history.py  test_customers.py  test_invoice.py  test_login_window.py  test_main_window.py  test_password_change_flow.py  test_pdf_and_more_features.py  test_products.py  test_receipt_formatting.py  test_receipt_view.py  test_settings_dialog.py  test_settings_retention.py  test_trial_expiry.py  test_users.py
ui/: about_dialog.py  customer_history_dialog.py  customer_view.py  customer_window.py  help_dialog.py  invoice_view.py  invoice_window.py  login_window.py  main_window.py  more.py  product_view.py  product_window.py  receipt_view.py  receipt_window.py  settings_dialog.py  user_view.py  users_dialog.py
utils/: __init__.py  activity_log.py  app_settings.py  backup.py  branding.py  date_windows.py  license_manager.py  logging_setup.py  resource_paths.py  session.py  ui_common.py
