[project]
name = "tradia"
version = "1.0.0"
description = "Wholesale Management System (MVP)"
authors = [ { name = "Ebenezer Fuachie", email = "fuachiee717@gmai.com" } ]
# Use SPDX license expression (avoids setuptools deprecation warning)
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["wholesale", "inventory", "invoicing", "pyqt", "wms"]
classifiers = [
  # Removed deprecated explicit license classifier per warning guidance
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Office/Business"
]
dependencies = [
  "PyQt6==6.9.0",
  "pandas==2.2.3",
  "openpyxl==3.1.5",
  "fpdf==1.7.2",
  "reportlab",
  "matplotlib",
  "python-dateutil==2.9.0.post0"
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "pytest-qt", "coverage"]

[project.scripts]
tradia = "main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP"
]
ignore = [
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["database", "models", "ui", "utils", "tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
strict_optional = false
show_error_codes = true
pretty = true
exclude = "(^|/)(build|dist|.*\\.egg-info)/"

[tool.coverage.run]
branch = true
source = ["database", "models", "ui", "utils"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.setuptools]
# Explicitly list packages to avoid "Multiple top-level packages discovered" error during editable install.
packages = ["database", "models", "ui", "utils"]

[tool.setuptools.exclude-package-data]
"*" = ["icons/*", "docs/*", "tests/*", "*.db"]
